@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-22T08:16:11Z",
-  "count_outdated" : 59,
-  "uniques_outdated" : 39,
-  "count" : 82,
-  "uniques" : 58,
+  "timestamp" : "2022-05-22T16:17:53Z",
+  "count_outdated" : 82,
+  "uniques_outdated" : 50,
+  "count" : 99,
+  "uniques" : 64,
   "clones" : [
-    {
-      "timestamp": "2022-05-08T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 23 ],
-      "uniques": 5,
-      "uniques_minmax": [ 5, 11 ]
-    },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 5,
