@@ -1,12 +1,7 @@
 {
-  "count": 23,
-  "uniques": 13,
+  "count": 17,
+  "uniques": 11,
   "clones": [
-    {
-      "timestamp": "2022-05-08T00:00:00Z",
-      "count": 6,
-      "uniques": 5
-    },
     {
       "timestamp": "2022-05-09T00:00:00Z",
       "count": 5,
